--- a/QuanLyNha.csproj
+++ b/QuanLyNha.csproj
@@ -96,6 +96,10 @@
     <Compile Include="Migrations\202307260717239_update-db.designer.cs">
       <DependentUpon>202307260717239_update-db.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202307281006511_add-payment.cs" />
+    <Compile Include="Migrations\202307281006511_add-payment.designer.cs">
+      <DependentUpon>202307281006511_add-payment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -105,11 +109,17 @@
     <EmbeddedResource Include="fMain.resx">
       <DependentUpon>fMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="fManager.resx">
+      <DependentUpon>fManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202307241331218_init-data.resx">
       <DependentUpon>202307241331218_init-data.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202307260717239_update-db.resx">
       <DependentUpon>202307260717239_update-db.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202307281006511_add-payment.resx">
+      <DependentUpon>202307281006511_add-payment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
